[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/box.png" type="Texture" id=1]
[ext_resource path="res://scripts/Box.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]

[node name="Box" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="box" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.22 )
texture = ExtResource( 1 )
offset = Vector2( 0, 0.575 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 2.4, 2.33 )
shape = SubResource( 1 )

[node name="Hit_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
scale = Vector2( 2.4, 2.33 )
shape = SubResource( 1 )

[connection signal="timeout" from="Hit_timer" to="." method="_on_Hit_timer_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
